<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/studentProfileSelfView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".presentation.profile.student.StudentProfileSelfViewFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/abTop"
        style="@style/Widget.App.Toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="8dp"
            android:minHeight="?attr/actionBarSize"
            app:forceDefaultNavigationOnClickListener="true"
            app:menu="@menu/top_app_bar_profile"
            app:navigationIcon="@drawable/ic_profile_24"
            app:title="@string/myProfileBarTitle" />
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="80dp"
                android:orientation="vertical"
                android:padding="16dp">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tvStudentProfileCardTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="4dp"
                    android:text="@string/tvStudentProfileCardTitle"
                    android:textAppearance="?attr/textAppearanceTitleLarge" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="4dp"
                    android:orientation="horizontal"
                    android:padding="16dp">

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/tvName"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:gravity="start|center"
                        android:text="@string/tvName"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/tvNameField"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:gravity="end|center"
                        android:text="@string/tvNameField"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="4dp"
                    android:orientation="horizontal"
                    android:padding="16dp">

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/tvMajor"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:gravity="start|center"
                        android:text="@string/tvMajor"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/tvMajorField"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:gravity="end|center"
                        android:text="@string/tvMajorField"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="4dp"
                    android:orientation="horizontal"
                    android:padding="16dp">

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/tvPronouns"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:gravity="start|center"
                        android:text="@string/tvPronouns"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/tvPronounsField"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:gravity="end|center"
                        android:text="@string/tvPronounsField"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="4dp"
                    android:orientation="horizontal"
                    android:padding="16dp">

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/tvMoneySpent"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:gravity="start|center"
                        android:text="@string/tvMoneySpent"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/tvMoneySpentField"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:gravity="end|center"
                        android:text="@string/tvMoneySpentField"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
                </LinearLayout>
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>

        <Button
            android:id="@+id/fabEditProfile"
            style="@style/Widget.Material3.ExtendedFloatingActionButton.Icon.Tertiary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginHorizontal="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/fabEditProfile"
            android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
            app:icon="@drawable/ic_edit_24" />
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</LinearLayout>