<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:gravity="center_vertical">


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/userCardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:padding="16dp"
        app:cardCornerRadius="16dp">


        <LinearLayout
            style="?attr/materialCardViewElevatedStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <ImageView
                android:id="@+id/tutorImage"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_gravity="center"
                android:layout_margin="4dp"
                android:contentDescription="@string/image"
                android:src="@drawable/user_icon" />

            <LinearLayout
                style="?attr/materialCardViewElevatedStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:padding="8dp">

                <TextView
                    android:id="@+id/tvName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="4dp"
                    android:text="@string/tvName"
                    android:textAppearance="@style/TextAppearance.Material3.TitleLarge" />

                <TextView
                    android:id="@+id/tvMajorField"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start|center"
                    android:layout_marginVertical="4dp"
                    android:layout_marginStart="24dp"
                    android:text="@string/tvMajorField"
                    android:textAppearance="@style/TextAppearance.Material3.BodySmall" />

                <TextView
                    android:id="@+id/emailView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start|center"
                    android:layout_marginVertical="4dp"
                    android:layout_marginStart="24dp"
                    android:text="@string/emailaddressview" />
            </LinearLayout>

        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
</FrameLayout>
